# pandarallel

./: .gitignore  404.html  LICENSE  README.md  examples_windows.ipynb  index.html  pandarallel.py  setup.cfg  setup.py  sitemap.xml  test.py  tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run_tests.yml
docs/: examples.ipynb  examples_mac_linux.ipynb  examples_windows.ipynb  mkdocs.yml
docs/docs/: index.md  troubleshooting.md  user_guide.md
pandarallel/: __init__.py  _pandarallel.py  core.py  dataframe.py  dataframe_groupby.py  pandarallel.py  plasma_store.py  progress_bars.py  rolling_groupby.py  series.py  series_rolling.py  utils.py
pandarallel/data_types/: __init__.py  dataframe.py  dataframe_groupby.py  expanding_groupby.py  generic.py  resample.py  resampler.py  rolling_groupby.py  series.py  series_rolling.py
pandarallel/utils/: inliner.py  progress_bars.py  tools.py
search/: search_index.json
tests/: test.py  test_inliner.py  test_pandarallel.py  test_series.py
troubleshooting/: index.html
user_guide/: index.html
