[metadata]
name = pandarallel
description = An easy to use library to speed up computation (by parallelizing on multi CPUs) with pandas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://nalepae.github.io/pandarallel
author = Manu NALEPA
author_email = nalepae@gmail.com
license = BSD
license_file = LICENSE
version = 1.6.5

classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    dill >= 0.3.1
    pandas >= 1
    psutil

[options.packages.find]
exclude =
    tests*
    
[options.extras_require]
dev =
    numpy
    pytest
    pytest-cov

doc = 
    mkdocs-material
